--- a/src/frameworks/miui/core/res/res/values/public.xml
+++ b/src/frameworks/miui/core/res/res/values/public.xml
@@ -1427,11 +1427,16 @@
   <public type="string" name="resource_get_auth_failed" id="0x060c0237" />
   <public type="string" name="description_summary" id="0x060c0238" />
   <public type="string" name="resource_price_format" id="0x060c0239" />
-  <public type="string" name="resource_import_request" id="0x060c023a" />
-  <public type="string" name="resource_import_success_num" id="0x060c023b" />
-  <public type="string" name="resource_import_complete" id="0x060c023c" />
-  <public type="string" name="resource_import_info" id="0x060c023d" />
-  <public type="string" name="resource_import_continue_info" id="0x060c023e" />
+  <public type="string" name="theme_update_request_title" id="0x060c023a" />
+  <public type="string" name="theme_update_request_content" id="0x060c023b" />
+  <public type="string" name="theme_update_request_continue_content" id="0x060c023c" />
+  <public type="string" name="theme_updating_title" id="0x060c023d" />
+  <public type="string" name="theme_updating_precontent" id="0x060c023e" />
+  <public type="string" name="theme_updating_content" id="0x060c023f" />
+  <public type="string" name="theme_update_complete_title" id="0x060c0240" />
+  <public type="string" name="theme_update_complete_content_success" id="0x060c0241" />
+  <public type="string" name="theme_update_complete_content_fail" id="0x060c0242" />
+  <public type="string" name="resource_get_auth_missing" id="0x060c0243" />
 
   <public type="style" name="Widget.ListView.NoDivider" id="0x060d0000" />
   <public type="style" name="Widget.TabWidget.Secondary" id="0x060d0001" />
