--- a/src/frameworks/miui/overlay/frameworks/base/core/res/res/layout/keyguard_screen_password_portrait.xml
+++ b/src/frameworks/miui/overlay/frameworks/base/core/res/res/layout/keyguard_screen_password_portrait.xml
@@ -159,6 +159,7 @@
         android:keyBackground="@*android:drawable/btn_keyboard_key_ics"
         android:visibility="gone"
         android:clickable="true"
+        android:layout_marginTop="-70dip"
     />
 
     <TextView
