--- a/src/packages/apps/MiuiSettings/res/xml/settings_headers.xml
+++ b/src/packages/apps/MiuiSettings/res/xml/settings_headers.xml
@@ -118,6 +118,15 @@
         android:title="@string/sync_settings"
         android:id="@+id/sync_settings" />
 
+    <!-- Mili Center -->
+    <header
+        android:id="@+id/milicenter_settings"
+        android:title="@string/milicenter_settings"
+        android:icon="@drawable/ic_settings_milicenter">
+        <intent
+            android:action="com.xiaomi.xmsf.action.MILICENTER" />
+    </header>
+
     <!-- DEVICE -->
     <header android:title="@string/header_category_device" />
 
