--- a/src/packages/apps/MiuiVideoPlayer/res/values-land-xhdpi/vp_dimension.xml
+++ b/src/packages/apps/MiuiVideoPlayer/res/values-land-xhdpi/vp_dimension.xml
@@ -54,4 +54,6 @@
   <dimen name="popup_bottom_controller_center_big_imageview_margin_left">67dp</dimen>
   <dimen name="popup_bottom_airkan_device_item_name_width">78dp</dimen>
   <dimen name="popup_bottom_airkan_device_item_margin_left">37dp</dimen>
+  	<dimen name="popup_media_info_location_x">50dp</dimen>
+	<dimen name="popup_media_info_location_y">69dp</dimen>
 </resources>
