--- a/src/packages/apps/SuperMarket/res/layout/app_details.xml
+++ b/src/packages/apps/SuperMarket/res/layout/app_details.xml
@@ -167,7 +167,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/common_padding"
                     android:orientation="vertical" >
-                    <miui.util.ScrollableScreenView
+                    <com.xiaomi.market.widget.ScrollableScreenView
                         android:id="@+id/screen_shots"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
