--- a/src/packages/apps/MiuiVideoPlayer/res/values-port-hdpi/vp_dimension.xml
+++ b/src/packages/apps/MiuiVideoPlayer/res/values-port-hdpi/vp_dimension.xml
@@ -55,4 +55,6 @@
 	<dimen name="popup_bottom_controller_center_big_imageview_margin_left">4dp</dimen>
 	<dimen name="popup_bottom_airkan_device_item_name_width">70dp</dimen>
 	<dimen name="popup_bottom_airkan_device_item_margin_left">33dp</dimen>
+	<dimen name="popup_media_info_location_x">44dp</dimen>
+	<dimen name="popup_media_info_location_y">61dp</dimen>
 </resources>
