--- a/src/packages/apps/MiuiGallery/res/values-zh-rTW/photoeditor_strings.xml
+++ b/src/packages/apps/MiuiGallery/res/values-zh-rTW/photoeditor_strings.xml
@@ -26,7 +26,7 @@
     <string name="no" msgid="5595408018304861875">"否"</string>
     <string name="save" msgid="5516670392524294967">"儲存"</string>
     <string name="autofix" msgid="1663414996270538748">"自動調整"</string>
-    <string name="crop" msgid="7598378507763334041">"修剪"</string>
+    <string name="crop" msgid="7598378507763334041">"裁切"</string>
     <string name="crossprocess" msgid="4173724489001742342">"交叉沖印"</string>
     <string name="documentary" msgid="50396326708699797">"紀錄片"</string>
     <string name="doodle" msgid="1686409894518940990">"塗鴉"</string>
@@ -38,14 +38,14 @@
     <string name="flip" msgid="2357692401826287480">"翻轉"</string>
     <string name="grain" msgid="7487585304579789098">"膠片顆粒"</string>
     <string name="grayscale" msgid="7641563843060945228">"黑白"</string>
-    <string name="highlight" msgid="3902653944386623972">"加亮區"</string>
+   <string name="highlight" msgid="3902653944386623972">"亮度"</string>
     <string name="lomoish" msgid="1270032154357186736">"LOMO 風格"</string>
     <string name="negative" msgid="1985508917342811252">"反色"</string>
     <string name="posterize" msgid="4139212359561383385">"色調分離"</string>
-    <string name="redeye" msgid="4958448806369928239">"紅眼"</string>
+    <string name="redeye" msgid="4958448806369928239">"去紅眼"</string>
     <string name="rotate" msgid="6607597269792373083">"旋轉"</string>
     <string name="saturation" msgid="8621322012271169931">"飽和度"</string>
-    <string name="sepia" msgid="7978093531824705601">"深褐色"</string>
+    <string name="sepia" msgid="7978093531824705601">"懷舊"</string>
     <string name="shadow" msgid="8235188588101973090">"陰影"</string>
     <string name="sharpen" msgid="8449662378104403230">"銳化"</string>
     <string name="straighten" msgid="5217801513491493491">"拉直"</string>
@@ -58,4 +58,11 @@
     <string name="redeye_tooltip" msgid="9112774042113471358">"點按可消除紅眼"</string>
     <string name="rotate_tooltip" msgid="7008602969130734229">"拖動照片可將其旋轉"</string>
     <string name="straighten_tooltip" msgid="4846317027139212339">"拖動照片可將其拉直"</string>
+    <string name="frame_button">“邊框”</string>
+    <string name="frame_classic">"經典"</string>
+    <string name="frame_white">"白框"</string>
+    <string name="frame_black">"黑框"</string>
+    <string name="frame_semicircle">"半圓"</string>
+    <string name="frame_movie">"膠片"</string>
+    <string name="contrast">"對比度"</string>
 </resources>
