--- a/src/packages/apps/MiuiVideoPlayer/res/values-en/vp_strings.xml
+++ b/src/packages/apps/MiuiVideoPlayer/res/values-en/vp_strings.xml
@@ -38,12 +38,12 @@
     <string name="airkan_video_playing"></string>
     <string name="menu_item_orientation_auto_sensor_action">Enable Rotate</string>
     <string name="menu_item_orientation_fixed_by_videosize_action">Disable Rotate</string>
-	<string name="menu_item_screen_shot">Capture</string>
-	<string name="menu_item_sub_title">sub title</string>
-	<string name="toast_message_continue_play_from">Playing from&#160;</string>
+    <string name="menu_item_screen_shot">Capture</string>
+    <string name="menu_item_sub_title">sub title</string>
+    <string name="toast_message_continue_play_from">Playing from&#160;</string>
     <string name="toast_message_continue_play_hour">h&#160;</string>
     <string name="toast_message_continue_play_minute">m&#160;</string>
     <string name="toast_message_continue_play_second_and_play">s</string>
     <string name="temp_play_history_button_label">Show Play history</string>
-     <string name="vp_VideoView_error_network_not_available">Network unavailable</string>
+    <string name="vp_VideoView_error_network_not_available">No network connection</string>
 </resources>
