--- a/src/packages/apps/MiuiVideoPlayer/res/values-zh-rTW/vp_strings.xml
+++ b/src/packages/apps/MiuiVideoPlayer/res/values-zh-rTW/vp_strings.xml
@@ -32,6 +32,5 @@
     <string name="adjust_position_next_media_notice">下一個</string>
     <string name="loading_video_netplay_label">正在載入影片, 請稍候...</string>
     <string name="buffering">緩衝中...</string>
-
-
+    <string name="vp_VideoView_error_network_not_available">網路未連線</string>
 </resources>
