--- a/src/packages/apps/MiuiHome/res/values/arrays.xml
+++ b/src/packages/apps/MiuiHome/res/values/arrays.xml
@@ -65,29 +65,29 @@
     </string-array>
 
     <array name="gadget_weather_image">
-        <item>Sunny</item>0  晴
+        <item>Clear</item>0  晴
         <item>Cloudy</item>1  多云
-        <item>Overcast</item>2  阴
-        <item>Fog</item>3  雾
-        <item>Strong Rainstorm</item>4  特大暴雨
-        <item>Heavy Rainstorm</item>5  大暴雨
-        <item>Rainstorm</item>6  暴雨
-        <item>T-Storms</item>7  雷阵雨
-        <item>Rain Showers</item>8  阵雨
-        <item>Heavy Rain</item>9  大雨
-        <item>Moderate Rain</item>0  中雨
-        <item>Light Rain</item>1  小雨
+        <item>Hazy</item>2  阴
+        <item>Foggy</item>3  雾
+        <item>Severe rainstorm</item>4  特大暴雨
+        <item>Rainstorm</item>5  大暴雨
+        <item>Very heavy rainfall</item>6  暴雨
+        <item>Thunderstorm</item>7  雷阵雨
+        <item>Shower</item>8  阵雨
+        <item>Heavy rainfall</item>9  大雨
+        <item>Rain</item>0  中雨
+        <item>Drizzle</item>1  小雨
         <item>Sleet</item>2  雨夹雪
-        <item>Blizzard</item>3   暴雨
-        <item>Snow Showers</item>4  阵雪
-        <item>Heavy Snow</item>5  大雪
-        <item>Moderate Snow</item>6  中雪
-        <item>Light Snow</item>7  小雪
-        <item>Strong Duststorm</item>8  强沙尘暴
-        <item>Duststorm</item>9  沙尘暴
-        <item>Dust</item>0  沙尘
-        <item>Blowing Sand</item>1  扬沙
-        <item>Hailstone</item>2  冰雹
+        <item>Snowstorm</item>3   暴雨
+        <item>Patches of snowfall</item>4  阵雪
+        <item>Heavy snowfall</item>5  大雪
+        <item>Snowfall</item>6  中雪
+        <item>Light snowfall</item>7  小雪
+        <item>Strong sandstorm</item>8  强沙尘暴
+        <item>Sandstorm</item>9  沙尘暴
+        <item>Light sandstorm</item>0  沙尘
+        <item>Sandstorm</item>1  扬沙
+        <item>Hail</item>2  冰雹
         <item>Floating Dust</item>3  浮尘
     </array>
 </resources>
