--- a/src/packages/apps/XiaomiServiceFramework/res/layout/payment.xml
+++ b/src/packages/apps/XiaomiServiceFramework/res/layout/payment.xml
@@ -1,5 +1,7 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <com.xiaomi.xmsf.payment.PaymentView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/payment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
