--- a/src/packages/apps/MiuiBrowser/res/layout/custom_screen.xml
+++ b/src/packages/apps/MiuiBrowser/res/layout/custom_screen.xml
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/black">
+            android:background="@color/white">
 
             <FrameLayout android:id="@+id/main_content"
                 android:layout_width="match_parent"
