update miui of [ics]
Change-Id: I69a123637390e1f7feea9abe528eac2f00f1dd37

--- a/src/frameworks/miui/core/res/res/values/public.xml
+++ b/src/frameworks/miui/core/res/res/values/public.xml
@@ -858,7 +858,7 @@
   <public type="id" name="boot_msg_animation" id="0x060b0022" />
   <public type="id" name="android_placeholder" id="0x060b0023" />
   <public type="id" name="buttonWebSearch" id="0x060b0024" />
-  
+
   <!-- for resource browser -->
   <public type="id" name="tableRow1" id="0x060b0025" />
   <public type="id" name="tableRow6" id="0x060b0026" />
@@ -1424,7 +1424,7 @@
   <public type="string" name="perm_payment_lab" id="0x060c022e" />
   <public type="string" name="perm_payment_dspt" id="0x060c022f" />
   <public type="string" name="resource_buy" id="0x060c0230" />
-  <public type="string" name="resources_importing" id="0x060c0231" />
+  <public type="string" name="resource_importing" id="0x060c0231" />
   <public type="string" name="resource_price_free" id="0x060c0232" />
   <public type="string" name="resource_price_unit" id="0x060c0233" />
   <public type="string" name="resource_get_auth" id="0x060c0234" />
@@ -1447,6 +1447,11 @@
   <public type="string" name="status_bar_toggle_drive_mode" id="0x060c0245" />
   <public type="string" name="status_bar_toggle_drive_mode_action" id="0x060c0246"/>
   <public type="string" name="status_bar_toggle_auto_brightness" id="0x060c0247" />
+
+  <!-- for resource browser -->
+  <public type="string" name="resource_get_auth_exceed_max_limit_title" id="0x060c0248" />
+  <public type="string" name="resource_get_auth_exceed_max_limit_tips" id="0x060c0249" />
+  <public type="string" name="resource_switch_account" id="0x060c024a" />
 
   <public type="style" name="Widget.ListView.NoDivider" id="0x060d0000" />
   <public type="style" name="Widget.TabWidget.Secondary" id="0x060d0001" />
