--- a/src/packages/apps/CloudService/res/xml/syncadapter_contacts.xml
+++ b/src/packages/apps/CloudService/res/xml/syncadapter_contacts.xml
@@ -4,5 +4,6 @@
     android:contentAuthority="com.android.contacts"
     android:accountType="@miui:string/xiaomi_account_type"
     android:supportsUploading="true"
+    android:isAlwaysSyncable="true"
     android:userVisible="true"
 />
