--- a/src/packages/apps/MiuiVideoPlayer/res/values-en/vp_strings.xml
+++ b/src/packages/apps/MiuiVideoPlayer/res/values-en/vp_strings.xml
@@ -34,7 +34,7 @@
     <string name="adjust_position_next_media_notice">Next</string>
     <string name="loading_video_netplay_label">Loading, please wait...</string>
     <string name="buffering">Buffering...</string>
-    <string name="airkan_video_playing_in">video is playing in</string>
+    <string name="airkan_video_playing_in">Video is playing in </string>
     <string name="airkan_video_playing">playing</string>
     <string name="menu_item_orientation_auto_sensor_action">Enable Auto Rotate</string>
     <string name="menu_item_orientation_fixed_by_videosize_action">Disable Auto Rotate</string>
