--- a/src/packages/apps/ThemeManager/res/layout/wallpaper_detail_info.xml
+++ b/src/packages/apps/ThemeManager/res/layout/wallpaper_detail_info.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingTop="10dip"
-    android:paddingBottom="10dip" >
+    android:paddingBottom="10dip"
+    android:paddingTop="10dip" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,12 +12,12 @@
         android:orientation="horizontal" >
 
         <TextView
-            style="@miui:style/ResourceBrowser.ResourceProperty.Title"
+            style="@style/WallpaperDetailInfoTitle"
             android:text="@miui:string/description_author" />
 
         <TextView
             android:id="@+id/author"
-            style="@miui:style/ResourceBrowser.ResourceProperty.Content" />
+            style="@style/WallpaperDetailInfoContent" />
     </LinearLayout>
 
     <LinearLayout
@@ -26,12 +26,12 @@
         android:orientation="horizontal" >
 
         <TextView
-            style="@miui:style/ResourceBrowser.ResourceProperty.Title"
+            style="@style/WallpaperDetailInfoTitle"
             android:text="@miui:string/description_size" />
 
         <TextView
             android:id="@+id/size"
-            style="@miui:style/ResourceBrowser.ResourceProperty.Content" />
+            style="@style/WallpaperDetailInfoContent" />
     </LinearLayout>
 
     <LinearLayout
@@ -40,13 +40,12 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/mark"
-            style="@miui:style/ResourceBrowser.ResourceProperty.Title"
+            style="@style/WallpaperDetailInfoTitle"
             android:text="@miui:string/description_uploadtime" />
 
         <TextView
             android:id="@+id/modifiedTime"
-            style="@miui:style/ResourceBrowser.ResourceProperty.Content" />
+            style="@style/WallpaperDetailInfoContent" />
     </LinearLayout>
 
     <LinearLayout
@@ -55,12 +54,12 @@
         android:orientation="horizontal" >
 
         <TextView
-            style="@miui:style/ResourceBrowser.ResourceProperty.Title"
+            style="@style/WallpaperDetailInfoTitle"
             android:text="@miui:string/description_download" />
 
         <TextView
             android:id="@+id/downloadCount"
-            style="@miui:style/ResourceBrowser.ResourceProperty.Content" />
+            style="@style/WallpaperDetailInfoContent" />
     </LinearLayout>
 
 </LinearLayout>
