--- a/src/packages/apps/ThemeManager/res/values/styles.xml
+++ b/src/packages/apps/ThemeManager/res/values/styles.xml
@@ -37,6 +37,25 @@
          <item name="android:windowExitAnimation">@anim/wallpaper_info_popup_fade_out</item>
     </style>
 
+    <style name="WallpaperDetailInfoTitle">
+        <item name="android:layout_width">0dip</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:gravity">right</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
+    </style>
+
+    <style name="WallpaperDetailInfoContent">
+        <item name="android:layout_width">0dip</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">2</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:gravity">left</item>
+        <item name="android:paddingLeft">10dip</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
+    </style>
+
     <!-- ratingBar style -->
     <style name="Resource.Comment.RatingBar.Edit" parent="@android:style/Widget.RatingBar">
         <item name="android:progressDrawable">@drawable/resource_comment_ratingbar</item>
