update miui of [jellybean]
Change-Id: I06ba54449f5089342a1cb3dbc36d6e7f0514b013

--- a/src/frameworks/miui/core/res/res/values/public.xml
+++ b/src/frameworks/miui/core/res/res/values/public.xml
@@ -2091,7 +2091,7 @@
   <public type="string" name="perm_payment_lab" id="0x060c022e" />
   <public type="string" name="perm_payment_dspt" id="0x060c022f" />
   <public type="string" name="resource_buy" id="0x060c0230" />
-  <public type="string" name="resources_importing" id="0x060c0231" />
+  <public type="string" name="resource_importing" id="0x060c0231" />
   <public type="string" name="resource_price_free" id="0x060c0232" />
   <public type="string" name="resource_price_unit" id="0x060c0233" />
   <public type="string" name="resource_get_auth" id="0x060c0234" />
@@ -2129,6 +2129,11 @@
   <public type="string" name="v5_icon_menu_bar_more_item_label" id="0x060c0252" />
   <public type="string" name="android_capital_on" id="0x060c0253" />
   <public type="string" name="android_capital_off" id="0x060c0254" />
+
+  <!-- for resource browser -->
+  <public type="string" name="resource_get_auth_exceed_max_limit_title" id="0x060c0255" />
+  <public type="string" name="resource_get_auth_exceed_max_limit_tips" id="0x060c0256" />
+  <public type="string" name="resource_switch_account" id="0x060c0257" />
 
   <public type="style" name="Widget.ListView.NoDivider" id="0x060d0000" />
   <public type="style" name="Widget.TabWidget.Secondary" id="0x060d0001" />
