--- a/src/packages/apps/MiuiVideoPlayer/res/layout/vp_popup_buffer_fullscreen_v5.xml
+++ b/src/packages/apps/MiuiVideoPlayer/res/layout/vp_popup_buffer_fullscreen_v5.xml
@@ -9,29 +9,36 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true" >
 
-        <TextView
-            android:id="@+id/loading_textview"
-            style="@style/vp_loading_buffering_textview_style_v5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+        <RelativeLayout
+            android:id="@+id/loading_group"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" 
             android:gravity="center"
-            android:text="@string/buffering_video_netplay_label_v5" />
+            >
 
-        <TextView
-            android:id="@+id/buffer_percent_textview"
-            style="@style/vp_loading_buffering_textview_style_v5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/loading_textview"
-            android:layout_toRightOf="@id/loading_textview" />
+            <TextView
+                android:id="@+id/loading_textview"
+                style="@style/vp_loading_buffering_textview_style_v5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/buffering_video_netplay_label_v5" />
+
+            <TextView
+                android:id="@+id/buffer_percent_textview"
+                style="@style/vp_loading_buffering_textview_style_v5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@id/loading_textview"
+                android:layout_toRightOf="@id/loading_textview" />
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/to_be_play_media_textview"
             style="@style/vp_loading_buffering_to_be_play_textview_style_v5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/loading_textview"
+            android:layout_below="@id/loading_group"
             android:layout_marginTop="42dp"
             android:gravity="center"
             android:text="@string/to_be_play_label_v5" />
