update miui of [ics]
Change-Id: I70972ab8a2ac8538985570aa8c4b80dd9d9d7cd6

--- a/src/frameworks/miui/core/res/res/values/attrs.xml
+++ b/src/frameworks/miui/core/res/res/values/attrs.xml
@@ -42,6 +42,8 @@
         <attr name="buttonOffDisable" format="reference"/>
         <attr name="buttonMask" format="reference"/>
         <attr name="buttonBar" format="reference"/>
+        <attr name="buttonBarOff" format="reference"/>
+        <attr name="buttonBarOn" format="reference"/>
     </declare-styleable>
 
     <!-- =============================== -->
