--- a/src/packages/apps/Email/res/xml/providers.xml
+++ b/src/packages/apps/Email/res/xml/providers.xml
@@ -403,6 +403,12 @@
         <outgoing uri="smtp://smtp.189.cn:25" username="$user" />
     </provider>
 
+    <!-- 沃邮箱 -->
+    <provider id="wo_mail" label="WO Mail" domain="wo.com.cn">
+        <incoming uri="pop3://pop.wo.com.cn:110" username="$user" />
+        <outgoing uri="smtp://smtp.wo.com.cn:25" username="$user" />
+    </provider>
+
     <!-- QQ邮箱 -->
     <provider id="qq_mail" label="QQ Mail" domain="qq.com">
         <incoming uri="imap+ssl+://imap.qq.com" username="$email" />
