--- a/src/frameworks/miui/core/res/res/values/public.xml
+++ b/src/frameworks/miui/core/res/res/values/public.xml
@@ -95,6 +95,10 @@
   <public type="attr" name="pushName" id="0x0601002f"/>
   <public type="attr" name="capability" id="0x06010030"/>
 
+  <!-- for sliding button -->
+  <public type="attr" name="buttonBarOff" id="0x06010031" />
+  <public type="attr" name="buttonBarOn" id="0x06010032" />
+
   <public type="drawable" name="alphabet_indexer_bg" id="0x06020000" />
   <public type="drawable" name="alphabet_indexer_bg_normal" id="0x06020001" />
   <public type="drawable" name="alphabet_indexer_bg_pressed" id="0x06020002" />
