update miui of [jellybean]
Change-Id: Ic3bce4d19570f5e47a92f2b04e86d4ad19dbcda3

--- a/src/packages/apps/MiuiSettings/res/layout/screen_color.xml
+++ b/src/packages/apps/MiuiSettings/res/layout/screen_color.xml
@@ -12,7 +12,7 @@
         android:scaleType="fitXY"/>
     <ListView
         android:id="@android:id/list"
-        android:background="@android:color/white"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
