--- a/src/packages/apps/MiuiSettings/res/values/colors.xml
+++ b/src/packages/apps/MiuiSettings/res/values/colors.xml
@@ -3,4 +3,6 @@
     <!-- 均衡器曲线 -->
     <color name="equalizer_curve">#e5ffffff</color>
     <color name="equalizer_curve_shadow">#33ffffff</color>
+
+    <color name="white">#ffffffff</color>
 </resources>
