update miui of [jellybean]
Change-Id: Iad7de6ec0c5448939f18c132d854597ea5c7085f

--- a/src/packages/apps/DeskClock/res/xml/settings.xml
+++ b/src/packages/apps/DeskClock/res/xml/settings.xml
@@ -55,8 +55,7 @@
         android:key="shutdown_alarm"
         android:defaultValue="true"
         android:title="@string/shutdown_alarm_title"
-        android:summaryOff="@string/shutdown_alarm_disable_summary"
-        android:summaryOn="@string/shutdown_alarm_enable_summary" />
+        android:summary="@string/shutdown_alarm_enable_summary" />
 
     <com.android.deskclock.AlarmPreference
         android:key="default_ringtone"
