--- a/src/packages/apps/Mms/res/layout/festival_sms_category_list_item.xml
+++ b/src/packages/apps/Mms/res/layout/festival_sms_category_list_item.xml
@@ -38,7 +38,8 @@
     <ImageView
         android:id="@+id/banner_view"
         android:visibility="gone"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:scaleType="centerInside"
         android:layout_marginTop="@dimen/list_item_padding_outer" />
 </LinearLayout>
