--- a/src/packages/apps/Weather/res/layout/act_set_city.xml
+++ b/src/packages/apps/Weather/res/layout/act_set_city.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@miui:drawable/list_medium_top_item_background_normal"
+        android:background="@drawable/list_medium_top_item_background_normal"
         >
         <ImageView
             android:id="@+id/gps_icon"
