--- a/src/packages/apps/Weather/res/layout/act_weather_range.xml
+++ b/src/packages/apps/Weather/res/layout/act_weather_range.xml
@@ -9,7 +9,7 @@
         android:id="@+id/title_container"
         android:layout_width="match_parent"
         android:layout_height="40dip"
-        android:background="@miui:drawable/list_medium_top_item_background_normal"
+        android:background="@drawable/list_medium_top_item_background_normal"
     >
         <TextView
             android:id="@+id/act_weather_range_title"
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginRight="8dip"
-            android:src="@miui:drawable/arrow_down"
+            android:src="@drawable/arrow_down"
         />
     </LinearLayout>
 
