--- a/src/packages/apps/Weather/res/layout/listitem_love_view.xml
+++ b/src/packages/apps/Weather/res/layout/listitem_love_view.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:paddingTop="5dip"
     android:paddingBottom="5dip"
-    android:background="@miui:drawable/list_medium_bottom_item_background_normal"
+    android:background="@drawable/list_medium_bottom_item_background_normal"
 >
     <TextView
         android:id="@+id/listitem_love_view_txt"
