--- a/src/packages/apps/Weather/res/layout/listitem_weather_main.xml
+++ b/src/packages/apps/Weather/res/layout/listitem_weather_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="48dip"
         android:layout_gravity="center_vertical"
-        android:background="@miui:drawable/list_medium_top_item_background_normal"
+        android:background="@drawable/list_medium_top_item_background_normal"
     >
         <ImageView
             android:id="@+id/listitem_weather_main_img"
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dip"
-            android:src="@miui:drawable/arrow_down"
+            android:src="@drawable/arrow_down"
             android:background="#00000000"
         />
     </LinearLayout>
@@ -62,7 +62,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        android:background="@miui:drawable/list_medium_top_item_background_normal"
+        android:background="@drawable/list_medium_top_item_background_normal"
     >
         <TextView
             android:id="@+id/listitem_weather_main_content"
