--- a/src/packages/apps/Weather/res/values/color.xml
+++ b/src/packages/apps/Weather/res/values/color.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="transparent_background">#00000000</color>
     <color name="selected">#00000000</color>
+    <color name="information_warning">#ffff7e00</color>
 </resources>
