--- a/src/packages/apps/Weather/res/layout/listitem_link_city.xml
+++ b/src/packages/apps/Weather/res/layout/listitem_link_city.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@miui:drawable/list_medium_top_item_background"
+        android:background="@drawable/list_medium_top_item_background_normal"
     >
         <CheckBox
             android:id="@+id/checkbox_select"
