--- a/src/packages/apps/Weather/res/layout/listitem_love_title.xml
+++ b/src/packages/apps/Weather/res/layout/listitem_love_title.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@miui:drawable/list_item_with_title_background"
+    android:background="@drawable/list_medium_top_item_background_normal"
 >
     <TextView
         android:id="@+id/listitem_love_title"
@@ -12,7 +12,7 @@
         android:layout_weight="1"
         android:layout_gravity="center"
         android:textSize="14sp"
-        android:textColor="@miui:color/information_warning"
+        android:textColor="@color/information_warning"
     />
     <TextView
         android:id="@+id/listitem_love_addons"
