--- a/src/packages/apps/Weather/res/values/style.xml
+++ b/src/packages/apps/Weather/res/values/style.xml
@@ -28,8 +28,8 @@
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">left|center_vertical</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@miui:color/information_warning</item>
-        <item name="android:background">@miui:drawable/list_item_with_title_background</item>
+        <item name="android:textColor">@color/information_warning</item>
+        <item name="android:background">@drawable/list_item_with_title_background</item>
     </style>
     <style name="text_shadow">
         <item name="android:layerType">software</item>
