update miui of [ics]
Change-Id: I05817ac02399d37dc6a8601073340b0c0efe07cd

--- a/src/frameworks/miui/core/res/res/values/arrays.xml
+++ b/src/frameworks/miui/core/res/res/values/arrays.xml
@@ -68,4 +68,13 @@
         <item>"PM"</item>
         <item>"PM"</item>
     </string-array>
+
+    <!-- component name mapping for patchrom  -->
+    <string-array translatable="false" name="patchrom_component_name_map">
+        <!--
+        e.g.:
+        <item>miui.full.packagename/miui.full.classname=thrid-part.full.packagename/third-part.full.classname</item>
+        -->
+    </string-array>
+
 </resources>
