--- a/src/frameworks/miui/core/res/res/values/public.xml
+++ b/src/frameworks/miui/core/res/res/values/public.xml
@@ -719,6 +719,7 @@
   <public type="array" name="detailed_am_pm_names" id="0x0606000b" />
   <public type="array" name="android_special_locale_codes" id="0x0606000c" />
   <public type="array" name="android_special_locale_names" id="0x0606000d" />
+  <public type="array" name="patchrom_component_name_map" id="0x0606000e"/>
 
   <public type="color" name="secondary_tab_text_color" id="0x06070000" />
   <public type="color" name="secondary_tab_text_pressed_color" id="0x06070001" />
